# PlayFabParty

./: .gitignore  .gitmodules  README.md
TraceScripts/: README.md  Trace-PlayFabParty.ps1
android/: README.md
android/PartySample/: README.md  build.gradle  gradle.properties  settings.gradle
android/PartySample/PartySampleApp/: build.gradle
android/PartySample/PartySampleApp/src/main/cpp/: CMakeLists.txt  NetworkStateChangeManager.cpp  NetworkStateChangeManager.h  pch.h
android/PartySample/demo/: AndroidManifest.xml  build.gradle
android/PartySample/demo/src/main/cpp/: CMakeLists.txt  NetworkStateChangeManager.cpp  NetworkStateChangeManager.h  PartyDemo.cpp  PartyDemo.h  pch.h
android/PartySample/gradle/wrapper/: gradle-wrapper.properties
android/PartySampleNetworkCommon/: Readme.md  cloudScript.js
android/PartySampleNetworkCommon/inc/: INetworkStateChangeManager.h  LanguageOptions.h  Manager.h  NetworkManager.h  PlayFabManager.h
android/PartySampleNetworkCommon/lib/: DebugLog.h  LanguageOptions.cpp  Managers.cpp  NetworkManager.cpp  NetworkMessages.cpp  PlayFabManager.cpp  pch.h
android/ext/playfabxplatsdk/src/cppsdk/: CMakeLists.txt  PlayFabXPlatCppSdkCommonProperties.props  playfabxplatcppsdk_Win10.vcxproj  playfabxplatcppsdk_gamecore.vcxproj  playfabxplatcppsdk_lnm.vcxproj  playfabxplatcppsdk_uwp.vcxproj  stdafx.h
android/ext/playfabxplatsdk/src/cppsdk/include/playfab/: PlayFabAdminApi.h  PlayFabAdminDataModels.h  PlayFabAdminInstanceApi.h  PlayFabAndroidHttpPlugin.h  PlayFabApiSettings.h  PlayFabAuthenticationApi.h  PlayFabAuthenticationDataModels.h  PlayFabAuthenticationInstanceApi.h  PlayFabBaseModel.h  PlayFabCallRequestContainerBase.h  PlayFabClientApi.h  PlayFabClientDataModels.h  PlayFabCloudScriptApi.h  PlayFabCloudScriptDataModels.h  PlayFabDataDataModels.h  PlayFabDataInstanceApi.h  PlayFabEconomyDataModels.h  PlayFabEconomyInstanceApi.h  PlayFabEventApi.h  PlayFabEventBuffer.h  PlayFabEventPipeline.h  PlayFabEventRouter.h  PlayFabEventsApi.h  PlayFabEventsDataModels.h  PlayFabEventsInstanceApi.h  PlayFabExperimentationApi.h  PlayFabExperimentationDataModels.h  PlayFabExperimentationInstanceApi.h  PlayFabGroupsApi.h  PlayFabGroupsDataModels.h  PlayFabIOSHttpPlugin.h  PlayFabIXHR2HttpPlugin.h  PlayFabIXHR2HttpRequest.h  PlayFabInsightsApi.h  PlayFabInsightsInstanceApi.h  PlayFabLeaderboardsApi.h  PlayFabLeaderboardsDataModels.h  PlayFabLeaderboardsInstanceApi.h  PlayFabLocalizationApi.h  PlayFabLocalizationDataModels.h  (+18 more)
android/ext/playfabxplatsdk/src/cppsdk/include/playfab/QoS/: DataCenterResult.h  PlayFabQoSApi.h  QoSResult.h  QoSSocket.h  RegionResult.h  XPlatSocket.h
android/ext/playfabxplatsdk/src/cppsdk/playfabxplatcppsdk_ios.xcodeproj/: project.pbxproj
android/ext/playfabxplatsdk/src/cppsdk/playfabxplatcppsdk_ios.xcodeproj/xcshareddata/xcschemes/: playfabxplatcppsdk_test.xcscheme
android/ext/playfabxplatsdk/src/cppsdk/source/playfab/: PlayFabAndroidHttpPlugin.cpp  PlayFabApiSettings.cpp  PlayFabCallRequestContainerBase.cpp  PlayFabClientApi.cpp  PlayFabClientInstanceApi.cpp  PlayFabCloudScriptInstanceApi.cpp  PlayFabEconomyApi.cpp  PlayFabEventApi.cpp  PlayFabEventPipeline.cpp  PlayFabExperimentationApi.cpp  PlayFabExperimentationInstanceApi.cpp  PlayFabGroupsApi.cpp  PlayFabGroupsInstanceApi.cpp  PlayFabIOSHttpPlugin.mm  PlayFabIOSPostRequestOCPP.mm  PlayFabIXHR2HttpPlugin.cpp  PlayFabIXHR2HttpRequest.cpp  PlayFabLeaderboardsInstanceApi.cpp  PlayFabLocalizationApi.cpp  PlayFabMatchmakerApi.cpp  PlayFabMatchmakerInstanceApi.cpp  PlayFabMultiplayerApi.cpp  PlayFabMultiplayerInstanceApi.cpp  PlayFabProfilesInstanceApi.cpp  PlayFabServerApi.cpp  PlayFabServerInstanceApi.cpp  PlayFabSpinLock.cpp
android/ext/playfabxplatsdk/src/cppsdk/source/playfab/QoS/: DataCenterResult.cpp  PlayFabQoSApi.cpp  RegionResult.cpp  XPlatSocket.cpp
iOS/: README.md
iOS/PartySample/: README.md
iOS/PartySample/PartySampleNetworkCommon/: Readme.md  Usage.txt
iOS/PartySample/PartySampleNetworkCommon/inc/: INetworkStateChangeManager.h  Managers.h  NetworkManager.h  NetworkMessages.h
iOS/PartySample/PartySampleNetworkCommon/lib/: LanguageOptions.cpp  NetworkManager.cpp  NetworkMessages.cpp  PlayFabManager.cpp  pch.cpp  pch.h
iOS/PartySample/app/: partysample_ios.xcconfig
iOS/PartySample/app/inc/: ChatEventHandler.h  Config.h  INetworkMessageHandler.h  NetworkStateChangeManager.h  SimpleClient.h  SimpleClientImpl.h  UserSelectViewController.h  pch.h
iOS/PartySample/app/networkcommon/: networkcommon_ios.xcconfig
iOS/PartySample/app/partysample_ios.xcodeproj/: project.pbxproj
iOS/PartySample/app/src/: AppDelegate.h  AppDelegate.m  ChatViewController.h  ChatViewController.m  Config.cpp  Info.plist  JoinViewController.h  JoinViewController.mm  NetworkStateChangeManager.cpp  SelectViewController.h  SelectViewController.m  (+6 more)
include/: AutoGenerate.csx  Party.h  PartyErrors.md  PartyImpl.h  PartyPal.h  PartyTestFeatures.h  PartyTestFeaturesImpl.h  PartyTestFeatures_c.h  PartyTypes.h  Party_c.h  PlayFabParty.h  UpdateErrorDocumentation.csx  UpdateHeaders.csx  XmlDocumentationStyle.md
include/verify_c_header/: CHeaderCompileVerification.c  launchExe.cmd
include/verify_c_header/win10/: verify_c_header_win10.vcxproj
include/xplat/: pub.vcxproj
licenses/: GSL-license.txt  asio-license.txt  nlohmann-json-license.txt  openssl-license.txt  opus-audio-codec-license.txt  pcwalton-ogg-license.txt  websocketpp-license.txt
linux/: README.md
macOS/: README.md
win32/: README.md
win32/PartySample/: .gitignore  PartySample.sln  README.md
win32/PartySample/PartySampleNetworkCommon/: Usage.txt
win32/PartySample/dll/: App.cpp  App.h  Log.cpp  Log.h  NetworkStateChangeManager.cpp  NetworkStateChangeManager.h  PartySampleApp.vcxproj  PartySampleNetworkCommon.vcxproj  PartySampleNetworkCommon.vcxproj.filters  PlayFabXPlatCppSdk.vcxproj  dllmain.cpp  packages.config  pch.h
win32/PartySample/gui/: App.xaml  App.xaml.cs  AppWindow.xaml  AppWindow.xaml.cs  PartySampleGui.csproj  PartySamplePage.xaml  PartySamplePage.xaml.cs  StartPage.xaml  StartPage.xaml.cs
(+169 files in other folders)
